test.txt
   Compiling reseau v0.1.0 (/home/etudiant/Documents/réseau/reseau)
error: cannot find derive macro `Serialize` in this scope
 --> src/config.rs:3:17
  |
3 | #[derive(Debug, Serialize, Deserialize)]
  |                 ^^^^^^^^^
  |
note: `Serialize` is imported here, but it is only a trait, without a derive macro
 --> src/config.rs:1:26
  |
1 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^
help: consider importing this derive macro
  |
1 + use serde_derive::Serialize;
  |

error: cannot find derive macro `Deserialize` in this scope
 --> src/config.rs:3:28
  |
3 | #[derive(Debug, Serialize, Deserialize)]
  |                            ^^^^^^^^^^^
  |
note: `Deserialize` is imported here, but it is only a trait, without a derive macro
 --> src/config.rs:1:13
  |
1 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
help: consider importing this derive macro
  |
1 + use serde_derive::Deserialize;
  |

error: cannot find derive macro `Serialize` in this scope
  --> src/config.rs:10:17
   |
10 | #[derive(Debug, Serialize, Deserialize)]
   |                 ^^^^^^^^^
   |
note: `Serialize` is imported here, but it is only a trait, without a derive macro
  --> src/config.rs:1:26
   |
1  | use serde::{Deserialize, Serialize};
   |                          ^^^^^^^^^
help: consider importing this derive macro
   |
1  + use serde_derive::Serialize;
   |

error: cannot find derive macro `Deserialize` in this scope
  --> src/config.rs:10:28
   |
10 | #[derive(Debug, Serialize, Deserialize)]
   |                            ^^^^^^^^^^^
   |
note: `Deserialize` is imported here, but it is only a trait, without a derive macro
  --> src/config.rs:1:13
   |
1  | use serde::{Deserialize, Serialize};
   |             ^^^^^^^^^^^
help: consider importing this derive macro
   |
1  + use serde_derive::Deserialize;
   |

error[E0603]: struct `RouterConfig` is private
  --> src/lib.rs:8:24
   |
8  |     use super::config::RouterConfig;
   |                        ^^^^^^^^^^^^ private struct
   |
note: the struct `RouterConfig` is defined here
  --> src/config.rs:11:1
   |
11 | struct RouterConfig {
   | ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `RouterConfig: Deserialize<'_>` is not satisfied
    --> src/config.rs:18:9
     |
18   |         serde_yaml::from_str(&content).expect("Failed to parse YAML")
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `RouterConfig`
     |
     = help: the following other types implement trait `Deserialize<'de>`:
               bool
               char
               isize
               i8
               i16
               i32
               i64
               i128
             and 145 others
note: required by a bound in `serde_yaml::from_str`
    --> /home/etudiant/.cargo/registry/src/index.crates.io-6f17d22bba15001f/serde_yaml-0.9.34+deprecated/src/de.rs:1810:8
     |
1808 | pub fn from_str<'de, T>(s: &'de str) -> Result<T>
     |        -------- required by a bound in this function
1809 | where
1810 |     T: Deserialize<'de>,
     |        ^^^^^^^^^^^^^^^^ required by this bound in `from_str`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `reseau` (lib) due to 5 previous errors
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0277, E0603.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `reseau` (lib test) due to 6 previous errors
